# StellarApplevel3

./: README.md
.github/workflows/: main.yml
vote_dApp-main/: CI_CD_DOCS.md  FEATURES_SPECS.md  INTER_CONTRACT_DOCS.md  MOBILE_RESPONSIVE.md  README.md  SUBMISSION_SUMMARY.md
vote_dApp-main/.github/workflows/: main.yml  test.yml
vote_dApp-main/contract/poll-contract/contracts/hello-world/: Cargo.toml
vote_dApp-main/contract/poll-contract/contracts/hello-world/src/: lib.rs  test.rs
vote_dApp-main/contract/poll-contract/contracts/hello-world/test_snapshots/test/: test_create_poll.1.json  test_vote.1.json
vote_dApp-main/contract/poll-contract/contracts/reward-contract/: Cargo.toml
vote_dApp-main/contract/poll-contract/contracts/reward-contract/src/: lib.rs
vote_dApp-main/frontend/stellar-poll-app/: .gitignore  .gitkeep  README.md  package-lock.json  package.json
vote_dApp-main/frontend/stellar-poll-app/src/: App.css  App.js  contract.js  styles.js  wallet.js
